Grabación de estudios

--- a/madurativas/Views/Home/Index.cshtml
+++ b/madurativas/Views/Home/Index.cshtml
@@ -111,6 +111,7 @@
          @if (ViewBag.fromDD == true)
          { 
             @Html.HiddenFor(Model => Model.pacienteIdDigidoc)
+            @Html.HiddenFor(Model => Model.pacienteId)
          }
 
         <div class="form-group">
