--- a/madurativas/Views/Shared/_Layout.cshtml
+++ b/madurativas/Views/Shared/_Layout.cshtml
@@ -150,6 +150,7 @@
     </h5>
     }
 
+    <script src="~/Scripts/iframeResizer.contentWindow.min.js" type="text/javascript"></script>
 </body>
 
 </html>
